--- a/ass20/style.css
+++ b/ass20/style.css
@@ -7,6 +7,7 @@
   body {
     display: flex;
     height: 100vh;
+    flex-wrap: wrap;
   }
 
   .sidebar {
@@ -16,6 +17,27 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+  }
+  .flex {
+    flex: 3;
+    background: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    min-height: 100vh;
+
+  }  
+  .flex-row {  
+    background: white;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    max-width: 700px;
+    flex-wrap: wrap;
   }
   input {
     background: #f8f9fa;
@@ -31,24 +53,15 @@
     text-decoration: none;
     color: #333;
   }
+  .ChatGPTwidth {
+    border: #f0f0f0;
+    max-width: 700px;
 
-  .flex {
-    flex: 3;
-    background: white;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
   }
-
-  .width {
-    width: 500px;
-  }
-  button {
-    display: inline-block;
-    padding: 10px 20px;
+  button{    
+    padding: 10px;
     margin: 5px;
     border-radius: 20px;
     background: #f0f0f0;
-  }
+    border:  #f0f0f0;
+  } 
