--- a/ass21/style.css
+++ b/ass21/style.css
@@ -7,7 +7,7 @@
 .middle{
     display: flex;
     overflow: auto;
-    justify-content:space-between;
+    justify-content:center;
     align-items: stretch;
     height: 100vh;
     flex-direction: column;
